fix: Alt key getting stuck
Don't rely on ctrl, shift, or alt or recording any other keys as pressed
If the window loses focus they will stay "pressed".
This change changes alt-left-click to "c" for ping
and changes "Esc" (which is already used for other things)
for autocamera to "Z"

--- a/public/index.css
+++ b/public/index.css
@@ -863,7 +863,7 @@ body.view-Game #toolbar {
   color: white;
 }
 
-body.auto-camera #center-cam-btn {
+body.auto-camera #center-cam-tooltip {
   display: none;
 }
 
